# API-Learn

./: README.md
Python/: pyproject.toml
Python/migrations/versions/: c023b93b6705_initial_migrate.py
Python/src/: app.py  app.py_old  db.py
Python/src/controlers/: user.py
Python_Fix/: pyproject.toml
Python_Fix/instance/: Dio.sqlite
Python_Fix/src/: app.py
Python_Fix/src/controlers/: auth.py
