[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-migrate"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
